# pbd-python

./: .gitignore  README.md  blah.py  exercise_index.json  generate_docs.py  pyproject.toml  update-and-push-docs.sh  update-docs.sh
docs/: .buildinfo  arraylists.html  basics-and-printing.html  classes-fields.html  classes-inheritance.html  classes-methods.html  classes.html  dictionaries.html  exceptions.html  file-rw.html  for-loops-ii.html  for-loops.html  functions.html  genindex.html  graphics-ii.html  graphics.html  guis.html  if-statements-ii.html  if-statements.html  index.html  intro-basics-and-printing.html  intro-keyboard-input.html  intro-variables.html  introduction-to-programming.html  keyboard-input.html  lists.html  nested-loops.html  objects-ii.html  objects.html  objects.inv  post-test-loops-ii.html  post-test-loops.html  project-euler.html  project-ii.html  project-iii.html  project-iiii.html  project.html  projects-ii.html  projects-iii.html  projects-iiii.html  (+10 more)
exercises/: 001-interpreter-check.md  002-execution-practice.md  003-an-important-message.md  004-escape-artist.md  005-comments.md  006-letter-to-principal.md  008-numbers-and-math.md  009-variables-and-names.md  010-more-variables-and-printing.md  011-using-variables.md  012-still-using-variables.md  013-your-schedule.md  014-user_input.md  015-the-forgetful-machine.md  016-name-age-and-salary.md  017-more-user-input-of-data.md  018-age-in-five-years.md  019-a-silly-calculator.md  020-bmi-calculator.md  021-what-if.md  022-how-old-are-you.md  023-if-elif-else.md  024-weekday-name.md  (+113 more)
(+1134 files in other folders)
